--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,46 +7,148 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8d7e9;
+            background-color: #ffe6f0; /* Soft pink */
             color: #333;
             text-align: center;
-            padding: 20px;
+            margin: 0;
+            padding: 0;
         }
         h1 {
-            color: #d147a3;
+            color: #d15b82;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+        .kelompok {
+            margin: 10px 0;
+            padding: 10px;
+            background-color: #ffd6e7;
+            border-radius: 5px;
         }
         button {
-            background-color: #d147a3;
+            background-color: #d15b82;
             color: white;
-            border: none;
             padding: 10px 20px;
-            cursor: pointer;
+            border: none;
             border-radius: 5px;
-            font-size: 16px;
+            cursor: pointer;
         }
         button:hover {
-            background-color: #b03e85;
-        }
-        select {
-            padding: 5px;
-            margin-top: 10px;
-            border-radius: 5px;
-            border: 1px solid #d147a3;
+            background-color: #b24a6a;
         }
     </style>
 </head>
 <body>
-    <h1>Pembagian Kelompok</h1>
-    <p>Pilih jumlah kelompok terus klik tombol di bawah.</p>
-    <select id="groupCount">
-        <option value="2">2 Kelompok</option>
-        <option value="3">3 Kelompok</option>
-        <option value="4">4 Kelompok</option>
-        <option value="5">5 Kelompok</option>
-    </select>
-    <br>
-    <button onclick="generateGroups()">Bagi Kelompok</button>
-    <div id="result"></div>
-    <script src="script.js"></script>
+    <div class="container">
+        <h1>Pembagian Kelompok</h1>
+        <button onclick="bagiKelompok()">Bagi Kelompok</button>
+        <div id="hasil"></div>
+    </div>
+
+    <script>
+        const dataKelas = [
+            { nama: "Alliza", gender: "cewe" },
+            { nama: "Annisa", gender: "cewe" },
+            { nama: "Aulia", gender: "cewe" },
+            { nama: "Azkha", gender: "cowo" },
+            { nama: "Bagus", gender: "cowo" },
+            { nama: "Devira", gender: "cewe" },
+            { nama: "Fathiyah", gender: "cewe" },
+            { nama: "Fatimah", gender: "cewe" },
+            { nama: "Julianto", gender: "cowo" },
+            { nama: "Kamila", gender: "cewe" },
+            { nama: "Kayla", gender: "cewe" },
+            { nama: "Khusnul", gender: "cewe" },
+            { nama: "Linda", gender: "cewe" },
+            { nama: "Aal", gender: "cowo" },
+            { nama: "Jihan", gender: "cewe" },
+            { nama: "Nadias", gender: "cewe" },
+            { nama: "Ami", gender: "cewe" },
+            { nama: "Dita", gender: "cewe" },
+            { nama: "Nala", gender: "cowo" },
+            { nama: "Maul", gender: "cowo" },
+            { nama: "Raniyah", gender: "cewe" },
+            { nama: "Revita", gender: "cewe" },
+            { nama: "Risda", gender: "cewe" },
+            { nama: "Shafa", gender: "cewe" },
+            { nama: "Wahyu", gender: "cowo" },
+            { nama: "Bayu", gender: "cowo" },
+            { nama: "Yasser", gender: "cowo" },
+            { nama: "Yeni", gender: "cewe" }
+        ];
+
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+        }
+
+        function bagiKelompok() {
+            const cowo = dataKelas.filter(s => s.gender === "cowo");
+            const cewe = dataKelas.filter(s => s.gender === "cewe");
+
+            shuffle(cowo);
+            shuffle(cewe);
+
+            const kelompok = [];
+            const maxKelompok = Math.min(14, Math.ceil(dataKelas.length / 2));
+            let indexCowo = 0, indexCewe = 0;
+
+            for (let i = 0; i < maxKelompok; i++) {
+                kelompok.push([]);
+            }
+
+            // Distribusi cowo dan cewe merata
+            for (let i = 0; i < maxKelompok; i++) {
+                if (indexCowo < cowo.length) kelompok[i].push(cowo[indexCowo++]);
+                if (indexCewe < cewe.length) kelompok[i].push(cewe[indexCewe++]);
+            }
+
+            // Jika masih ada siswa yang belum masuk kelompok
+            while (indexCowo < cowo.length) {
+                kelompok[indexCowo % maxKelompok].push(cowo[indexCowo++]);
+            }
+            while (indexCewe < cewe.length) {
+                kelompok[indexCewe % maxKelompok].push(cewe[indexCewe++]);
+            }
+
+            // Logika khusus untuk Bagus dan Raniyah
+            let peluangBagusRaniyah = Math.random() < 0.7;
+            if (peluangBagusRaniyah) {
+                const kelompokBagus = kelompok.find(k => k.some(s => s.nama === "Bagus"));
+                const kelompokRaniyah = kelompok.find(k => k.some(s => s.nama === "Raniyah"));
+
+                if (kelompokBagus && kelompokRaniyah && kelompokBagus === kelompokRaniyah) {
+                    const indeksBagus = kelompokBagus.findIndex(s => s.nama === "Bagus");
+                    const indeksRaniyah = kelompokBagus.findIndex(s => s.nama === "Raniyah");
+
+                    if (Math.abs(indeksBagus - indeksRaniyah) <= 1) {
+                        let randomPerson = kelompokBagus.pop();
+                        kelompok[(kelompok.indexOf(kelompokBagus) + 1) % maxKelompok].push(randomPerson);
+                    }
+                }
+            }
+
+            tampilkanKelompok(kelompok);
+        }
+
+        function tampilkanKelompok(kelompok) {
+            const hasilDiv = document.getElementById("hasil");
+            hasilDiv.innerHTML = "";
+
+            kelompok.forEach((k, index) => {
+                const div = document.createElement("div");
+                div.className = "kelompok";
+                div.innerHTML = `<strong>Kelompok ${index + 1}:</strong> ${k.map(s => s.nama).join(", ")}`;
+                hasilDiv.appendChild(div);
+            });
+        }
+    </script>
 </body>
 </html>
