--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@ function bagiKelompok() {
         return;
     }
 
+    // Pisahkan cowok dan cewek
     const cowok = dataKelas.filter(s => s.gender === "cowo");
     const cewek = dataKelas.filter(s => s.gender === "cewe");
 
-    // Pastikan Bagus dan Raniyah satu kelompok
+    // Pastikan Bagus dan Raniyah selalu satu kelompok
     const bagus = cowok.splice(cowok.findIndex(s => s.nama === "Bagus"), 1)[0];
     const raniyah = cewek.splice(cewek.findIndex(s => s.nama === "Raniyah"), 1)[0];
 
+    // Siapkan kelompok
     const kelompok = Array.from({ length: jumlahKelompok }, () => []);
 
     // Pilih kelompok acak untuk Bagus dan Raniyah
     const kelompokBagusRaniyah = Math.floor(Math.random() * jumlahKelompok);
+    
+    // Masukkan Bagus dan Raniyah dalam kelompok yang sama, pastikan mereka tidak langsung bersebelahan
     kelompok[kelompokBagusRaniyah].push(bagus);
-    kelompok[kelompokBagusRaniyah].push(null); // Separator
+    kelompok[kelompokBagusRaniyah].push(null); // Tambahkan slot kosong untuk memisahkan
     kelompok[kelompokBagusRaniyah].push(raniyah);
 
-    // Shuffle anggota lain
+    // Shuffle anggota lain (cowok dan cewek)
     shuffle(cowok);
     shuffle(cewek);
 
@@ -39,7 +43,7 @@ function bagiKelompok() {
         i++;
     }
 
-    // Hilangkan slot kosong
+    // Hapus slot kosong untuk memisahkan Bagus dan Raniyah
     kelompok.forEach(k => {
         const index = k.indexOf(null);
         if (index > -1) k.splice(index, 1);
